--- a/blog-project/src/main/resources/application.properties
+++ b/blog-project/src/main/resources/application.properties
@@ -20,7 +20,7 @@ logging.level.org.springframework.jdbc.core=TRACE
 #spring.thymeleaf.cache=false
 logging.file.name=logs/application.log
 
-spring.datasource.url=jdbc:postgresql://dpg-crhu6klumphs73c9hfq0-a:5432/postgres_blog_xpmp>
+spring.datasource.url=jdbc:postgresql://dpg-crhu6klumphs73c9hfq0-a:5432/postgres_blog_xpmp
 spring.datasource.username=postgres_blog_xpmp_user
 spring.datasource.password=RcKMcgwX6wNdFNPjND0mP2uuWtrGVUIw
 spring.jpa.hibernate.ddl-auto=update
